@@ -26,7 +26,8 @@ package org.gjt.sp.jedit.gui;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.*;
-import java.util.Vector;
+import java.util.HashSet;
+import java.util.Set;
 import org.gjt.sp.jedit.syntax.*;
 import org.gjt.sp.jedit.textarea.*;
 import org.gjt.sp.jedit.*;
@@ -49,55 +50,68 @@ public class CompleteWord extends JWindow
 		}
 
 		KeywordMap keywordMap = buffer.getKeywordMapAtOffset(caret);
-		String noWordSep = getNonAlphaNumericWordChars(buffer,keywordMap,caret);
-		String word = getWordToComplete(buffer,caretLine,caret,noWordSep);
+		String noWordSep = getNonAlphaNumericWordChars(
+			buffer,keywordMap,caret);
+		String word = getWordToComplete(buffer,caretLine,
+			caret,noWordSep);
 		if(word == null)
 		{
 			textArea.getToolkit().beep();
 			return;
 		}
 
-		Vector completions = getCompletions(buffer,word,keywordMap,
-			noWordSep,caret);
+		Completion[] completions = getCompletions(buffer,word,caret);
 
-		if(completions.size() == 0
-			|| (completions.size() == 1 &&
-			((Completion)completions.get(0)).text.equals(word)))
+		if(completions.length == 0)
 		{
 			textArea.getToolkit().beep();
 		}
 		//{{{ if there is only one competion, insert in buffer
-		else if(completions.size() == 1)
+		else if(completions.length == 1)
 		{
-			textArea.setSelectedText(completions
-				.elementAt(0).toString()
-				.substring(word.length()));
+			Completion c = completions[0];
+
+			if(c.text.equals(word))
+			{
+				textArea.getToolkit().beep();
+			}
+			else
+			{
+				textArea.setSelectedText(c.text.substring(
+					word.length()));
+			}
 		} //}}}
 		//{{{ show popup if > 1
 		else
 		{
 			String longestPrefix = MiscUtilities.getLongestPrefix(
-				completions,keywordMap != null
+				completions,
+				keywordMap != null
 				? keywordMap.getIgnoreCase()
 				: false);
 
 			if (word.length() < longestPrefix.length())
-			buffer.insert(caret,longestPrefix.substring(word.length()));
+			{
+				buffer.insert(caret,longestPrefix.substring(
+					word.length()));
+			}
 
 			textArea.scrollToCaret(false);
-			Point location = textArea.offsetToXY(caret - word.length());
+			Point location = textArea.offsetToXY(
+				caret - word.length());
 			location.y += textArea.getPainter().getFontMetrics()
 				.getHeight();
 
 			SwingUtilities.convertPointToScreen(location,
 				textArea.getPainter());
-			new CompleteWord(view,longestPrefix,completions,location,noWordSep);
+			new CompleteWord(view,longestPrefix,
+				completions,location,noWordSep);
 		} //}}}
 	} //}}}
 
 	//{{{ CompleteWord constructor
-	public CompleteWord(View view, String word, Vector completions, Point location,
-		String noWordSep)
+	public CompleteWord(View view, String word, Completion[] completions,
+		Point location, String noWordSep)
 	{
 		super(view);
 
@@ -130,7 +144,7 @@ public class CompleteWord extends JWindow
 
 		words = new JList(completions);
 
-		words.setVisibleRowCount(Math.min(completions.size(),8));
+		words.setVisibleRowCount(Math.min(completions.length,8));
 
 		words.addMouseListener(new MouseHandler());
 		words.setSelectedIndex(0);
@@ -218,11 +232,57 @@ public class CompleteWord extends JWindow
 	} //}}}
 
 	//{{{ getCompletions() method
-	private static Vector getCompletions(Buffer buffer, String word,
-		KeywordMap keywordMap, String noWordSep, int caret)
+	private static Completion[] getCompletions(Buffer buffer, String word,
+		int caret)
 	{
-		Vector completions = new Vector();
+		// build a list of unique words in all visible buffers
+		Set completions = new HashSet();
+		Set buffers = new HashSet();
 
+		View views = jEdit.getFirstView();
+		while(views != null)
+		{
+			EditPane[] panes = views.getEditPanes();
+			for(int i = 0; i < panes.length; i++)
+			{
+				Buffer b = panes[i].getBuffer();
+				if(buffers.contains(b))
+					continue;
+
+				buffers.add(b);
+
+				// only complete current buffer's keyword map
+				KeywordMap keywordMap;
+				if(b == buffer)
+				{
+					keywordMap = b.getKeywordMapAtOffset(
+						caret);
+				}
+				else
+					keywordMap = null;
+
+				int offset = (b == buffer ? caret : 0);
+				String noWordSep = getNonAlphaNumericWordChars(
+					b,keywordMap,offset);
+
+				getCompletions(b,word,keywordMap,noWordSep,
+					offset,completions);
+			}
+
+			views = views.getNext();
+		}
+
+		Completion[] completionArray = (Completion[])completions
+			.toArray(new Completion[completions.size()]);
+
+		return completionArray;
+	} //}}}
+
+	//{{{ getCompletions() method
+	private static void getCompletions(Buffer buffer, String word,
+		KeywordMap keywordMap, String noWordSep, int caret,
+		Set completions)
+	{
 		int wordLen = word.length();
 
 		//{{{ try to find matching keywords
@@ -236,8 +296,8 @@ public class CompleteWord extends JWindow
 					0,word,0,wordLen))
 				{
 					Completion keyword = new Completion(_keyword,true);
-					if(completions.indexOf(keyword) == -1)
-						completions.addElement(keyword);
+					if(!completions.contains(keyword))
+						completions.add(keyword);
 				}
 			}
 		} //}}}
@@ -256,8 +316,8 @@ public class CompleteWord extends JWindow
 				Completion comp = new Completion(_word,false);
 
 				// remove duplicates
-				if(completions.indexOf(comp) == -1)
-					completions.addElement(comp);
+				if(!completions.contains(comp))
+					completions.add(comp);
 			}
 
 			// check for match inside line
@@ -274,17 +334,12 @@ public class CompleteWord extends JWindow
 						Completion comp = new Completion(_word,false);
 
 						// remove duplicates
-						if(completions.indexOf(comp) == -1)
-							completions.addElement(comp);
+						if(!completions.contains(comp))
+							completions.add(comp);
 					}
 				}
 			}
 		} //}}}
-
-		// sort completion list
-		MiscUtilities.quicksort(completions,new MiscUtilities.StringICaseCompare());
-
-		return completions;
 	} //}}}
 
 	//{{{ completeWord() method
@@ -426,17 +481,20 @@ public class CompleteWord extends JWindow
 					word = word.substring(0,word.length() - 1);
 					textArea.backspace();
 					int caret = textArea.getCaretPosition();
-					KeywordMap keywordMap = buffer.getKeywordMapAtOffset(caret);
 
-					Vector completions = getCompletions(buffer,word,
-						keywordMap,noWordSep,caret);
+					Completion[] completions
+						= getCompletions(buffer,word,
+						caret);
 
-					if(completions.size() == 0)
+					if(completions.length == 0)
+					{
 						dispose();
+						return;
+					}
 
 					words.setListData(completions);
 					words.setSelectedIndex(0);
-					words.setVisibleRowCount(Math.min(completions.size(),8));
+					words.setVisibleRowCount(Math.min(completions.length,8));
 
 					pack();
 
@@ -502,10 +560,10 @@ public class CompleteWord extends JWindow
 				int caret = textArea.getCaretPosition();
 				KeywordMap keywordMap = buffer.getKeywordMapAtOffset(caret);
 
-				Vector completions = getCompletions(buffer,word,keywordMap,
-					noWordSep,caret);
+				Completion[] completions = getCompletions(
+					buffer,word,caret);
 
-				if(completions.size() == 0)
+				if(completions.length == 0)
 				{
 					dispose();
 					return;
@@ -513,6 +571,7 @@ public class CompleteWord extends JWindow
 
 				words.setListData(completions);
 				words.setSelectedIndex(0);
+				words.setVisibleRowCount(Math.min(completions.length,8));
 			}
 		} //}}}
 	} //}}}
